# kedro-dagster

./: .gitignore  .readthedocs.yml  404.html  CONTRIBUTING.md  README.md  RELEASE.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml  tox.toml
.github/workflows/: check.yml  checks-coverage.yml  checks_coverage.yml  documentation.yml  lint.yml  nightly-build.yml  package.yml  release.yml  tests-nightly.yml  tests-os-coverage.yml  tests-versions.yml  tests_versions.yml
docs/: index.md
docs/pages/: api.md  example.md  faq.md  getting-started.md  guide.md  intro.md  reference.md  technical.md
docs/pages/api/: kedro-dagster.md
docs/pages/getting-started/: index.md  installation.md
docs/pages/introduction/: intro.md
fake-project/: README.md  pyproject.toml
fake-project/src/fake_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
features/: cli.feature  cli_steps.py  config.feature  config_steps.py  environment.py  pipeline_config.feature  pipeline_config_steps.py  pipeline_jobs.feature  pipeline_jobs_steps.py
features/steps/: cli.feature  cli_steps.py  sh_run.py
kedro_dagster/: __init__.py  assets.py  cli.py  config.py  jobs.py  resources.py  translation.py  utils.py
kedro_dagster/templates/: definitions.py
search/: search_index.json
src/kedro_dagster/: __init__.py  assets.py  catalog.py  cli.py  config.py  dagster.py  dataset.py  executors.py  jobs.py  kedro.py  loggers.py  logging.py  nodes.py  ops.py  partition_dataset.py  pipeline_hooks.py  pipelines.py  resources.py  schedules.py  translation.py  translator.py  utils.py
src/kedro_dagster/config/: __init__.py  automation.py  dev.py  execution.py  job.py  kedro_dagster.py  logging.py
src/kedro_dagster/datasets/: __init__.py  nothing_dataset.py  partitioned_dataset.py
src/kedro_dagster/templates/: dagster.yml  definitions.py  dg.toml
tests/: conftest.py  helpers.py  test_catalog.py  test_catalog_translator.py  test_cli.py  test_cli_dev_env.py  test_dagster.py  test_dagster_creators.py  test_dagster_translators.py  test_executor_translator.py  test_hooks_integration.py  test_kedro.py  test_kedro_run_translator.py  test_logger_and_schedule.py  test_logging.py  test_mlflow_integration.py  test_node_translator.py  test_nodes.py  test_partition_mappings.py  test_pipeline_hooks_and_enumeration.py  test_pipeline_partition_logic.py  test_pipeline_translator.py  test_pipelines.py  test_plugin.py  test_project_translator_integration.py  test_translator.py  test_utils.py
tests/bdd/: conftest.py
tests/bdd/step_defs/: test_cli.py
tests/bdd/steps/: cli_steps.py
tests/bdd/utils/: sh_run.py  venv.py
tests/config/: test_config_models.py  test_get_dagster_config_integration.py
tests/datasets/: test_nothing_dataset.py  test_partitioned_dataset.py
tests/scenarios/: helpers.py  kedro_projects.py  project_factory.py
tests/templates/: test_definitions_ast.py  test_templates.py  test_templates_model_parity.py
tests/translators/: test_catalog_translator.py  test_executor_translator.py  test_logger_and_schedule.py  test_node_translator.py  test_partition_mappings.py  test_pipeline_hooks_and_enumeration.py  test_pipeline_partition_logic.py  test_pipeline_translator.py
tests/unit/: test_utils.py
