[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "kedro-dagster"
dynamic = ["version"]
authors = [
    { name = "Guillaume Tauzin", email = "gtauzin@protonmail.com" },
]
description = "Kedro-Dagster makes it easy to deploy Kedro projects to Dagster"
license = "Apache-2.0"
readme.content-type = "text/markdown"
readme.file = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kedro>=0.19.0",
    "kedro-datasets",
    "dagster>=1.9,<2.0",
    "dagster-webserver>=1.9,<2.0",
]

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
]
docs = [
  "matplotlib>=3.9.2",
  "numpydoc>=1.8.0",
  "pydata-sphinx-theme>=0.16.0",
  "setuptools-scm>=8",
  "sphinx>=8.0.2",
  "sphinx-design>=0.6.1",
  "sphinx-gallery>=0.18.0",
  "sphinx-prompt>=1.9.0",
  "myst_parser>=4.0.0",
]
fix = [
  "pre-commit-uv>=4.1.3",
]
test = [
  "pytest>=8.3.3",
  "pytest-cov>=5",
  "pytest-xdist>=3.6.1",
  "moto>=5.0",
  "boto3>=1.35",
  "covdefaults>=2.3",
  "diff-cover>=9.2",
]

[project.entry-points."kedro.project_commands"]
dagster = "kedro_dagster.cli:commands"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
exclude = ["docs/**"]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore=[
    "E203", # space before : (needed for how black formats slicing)
    "E731", # do not assign a lambda expression, use a def
    "E741", # do not use variables named 'l', 'O', or 'I'
    "E501", # ruff format takes care of line-too-long
    "PLR0913", # too many args in func def
    "PLR0915", # too many statements
    "PLR0912", # too many branches
]

[tool.ruff.lint.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"examples/*"=["E402"]

[tool.pytest.ini_options]
addopts = """
--doctest-modules --color=yes \
--cov-report term-missing \
--cov src/kedro_dagster -ra"""
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.coverage]
paths.source = ["src/kedro_dagster"]
report.fail_under = 10
report.include_namespace_packages = true
report.skip_covered = false
html.show_contexts = true
run.omit = [
    "tests/*",
    "*/tests/*",
]
run.parallel = true
run.plugins = [
  "covdefaults",
]
