[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "fake_project"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.10",]

[project.scripts]
fake-project = "fake_project.__main__:main"

[tool.kedro]
package_name = "fake_project"
project_name = "Fake Project"
kedro_init_version = "0.19.10"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "fake_project.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
